修改activity_weather_now.xml介面排版 字串資源檔使用多國語言偵測，目前天氣描述依系統語言首次寫入資料庫

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,52 @@
 <resources>
     <string name="app_name">OpenWeather</string>
+    <string name="code00">tornado</string>
+    <string name="code01">tropical storm</string>
+    <string name="code02">hurricane</string>
+    <string name="code03">severe thunderstorms</string>
+    <string name="code04">thunderstorms</string>
+    <string name="code05">mixed rain and snow</string>
+    <string name="code06">mixed rain and sleet</string>
+    <string name="code07">mixed snow and sleet</string>
+    <string name="code08">freezing drizzle</string>
+    <string name="code09">drizzle</string>
+    <string name="code10">freezing rain</string>
+    <string name="code11">showers</string>
+    <string name="code12">showers</string>
+    <string name="code13">snow flurries</string>
+    <string name="code14">light snow showers</string>
+    <string name="code15">blowing snow</string>
+    <string name="code16">snow</string>
+    <string name="code17">hail</string>
+    <string name="code18">sleet</string>
+    <string name="code19">dust</string>
+    <string name="code20">foggy</string>
+    <string name="code21">haze</string>
+    <string name="code22">smoky</string>
+    <string name="code23">blustery</string>
+    <string name="code24">windy</string>
+    <string name="code25">cold</string>
+    <string name="code26">cloudy</string>
+    <string name="code27">mostly cloudy (night)</string>
+    <string name="code28">mostly cloudy (day)</string>
+    <string name="code29">partly cloudy (night)</string>
+    <string name="code30">partly cloudy (day)</string>
+    <string name="code31">clear (night)</string>
+    <string name="code32">sunny</string>
+    <string name="code33">fair (night)</string>
+    <string name="code34">fair (day)</string>
+    <string name="code35">mixed rain and hail</string>
+    <string name="code36">hot</string>
+    <string name="code37">isolated thunderstorms</string>
+    <string name="code38">scattered thunderstorms</string>
+    <string name="code39">scattered thunderstorms</string>
+    <string name="code40">scattered showers</string>
+    <string name="code41">heavy snow</string>
+    <string name="code42">scattered snow showers</string>
+    <string name="code43">heavy snow</string>
+    <string name="code44">partly cloudy</string>
+    <string name="code45">thundershowers</string>
+    <string name="code46">snow showers</string>
+    <string name="code47">isolated thundershowers</string>
+    <string name="code3200">not available</string>
 </resources>
