1.新增Settings並使用SettingView(建置完成) 2.WeatherNow頁面刷新bug解決mAlpha=0

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,7 @@
     <string name="visiblity">Visiblity</string>
     <string name="tvAstronomy">Astronomy</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
