時間溫度設定使用SharedPreferences

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -59,5 +59,6 @@
     <string name="humidity">濕度</string>
     <string name="visiblity">能見度</string>
     <string name="tvAstronomy">天文</string>
+    <string name="tvBack">返回</string>
 
 </resources>
