--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
     <string name="humidity">Humidity</string>
     <string name="visiblity">Visiblity</string>
     <string name="tvAstronomy">Astronomy</string>
+    <string name="tvBack">返回</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
