--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -91,5 +91,6 @@
     <string name="visiblity">能見度</string>
     <string name="tvAstronomy">天文</string>
     <string name="tvBack">返回</string>
+    <string name="wind_class">級</string>
 
 </resources>
