建立WeatherChartView折線圖顯示天氣預報(尚未連動)

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -90,6 +90,7 @@
     <string name="humidity">濕度</string>
     <string name="visiblity">能見度</string>
     <string name="tvAstronomy">天文</string>
+    <string name="tvForecast">預報</string>
     <string name="tvBack">返回</string>
     <string name="wind_class">級</string>
 
