--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,6 +82,17 @@
     <string name="speed11">Violent storm</string>
     <string name="speed12">Hurricane</string>
 
+
+    <string name="Today">Today</string>
+    <string name="Tomorrow">Tomorrow</string>
+    <string name="Sun">Sun</string>
+    <string name="Mon">Mon</string>
+    <string name="Tue">Tue</string>
+    <string name="Wed">Wed</string>
+    <string name="Thu">Thu</string>
+    <string name="Fri">Fri</string>
+    <string name="Sat">Sat</string>
+
     <string name="tv_condition">Condition</string>
     <string name="tvChill">Feel: </string>
     <string name="tv_wind">Wind speed and direction</string>
