--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -104,4 +104,19 @@
     <string name="tvBack">返回</string>
     <string name="wind_class">級</string>
 
+    <string name="title_activity_welcome">主畫面</string>
+    <string name="next">下一個</string>
+    <string name="skip">跳過</string>
+    <string name="start">開始</string>
+    <string name="slide_1_title">哈囉!</string>
+    <string name="slide_1_desc">歡迎使用天氣小幫手!</string>
+    <string name="slide_2_title">Movie Tickets</string>
+    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>
+    <string name="slide_3_title">Great Discounts</string>
+    <string name="slide_3_desc">Best discounts on every single service we offer!</string>
+    <string name="slide_4_title">World Travel</string>
+    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>
+    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
+    <string name="play_again">Play Again</string>
+
 </resources>
