1.建立AirMainActivity使用navigationtabbar下方滑動搭配Fragment(AQI、PM2.5、AIR) 2.AQIFragment設計完成(尚未連棟資料)，使用DashboardView計量表顯示數值

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -149,4 +149,18 @@
     <string name="uv_suggest4">帽子/陽傘+防曬液+太陽眼鏡+陰涼處+長袖衣物,上午十時至下午二時最好不外出</string>
     <string name="uv_suggest5">帽子/陽傘+防曬液+太陽眼鏡+陰涼處+長袖衣物,上午十時至下午二時最好不外出</string>
 
+    <string-array name="meter">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
+        <item>7</item>
+        <item>8</item>
+        <item>9</item>
+        <item>10</item>
+    </string-array>
+
 </resources>
